Chromad: Do not run online whitelist user check

Fixes Chrome crash on Chromad devices if DeviceUserWhitelist policy is
set

Bug: 775834
Test: manual
Change-Id: I3264363336d0186d7401ef8733457c1cdbcd1829